--- a/vignettes/getting-updates.Rmd
+++ b/vignettes/getting-updates.Rmd
@@ -77,7 +77,8 @@ mean((preds_upper >= y_validation)*(preds_lower <= y_validation))
 # 4 - Update -----
 # add new points in an online fashion
 fit_obj2 <- bayesianrvfl::update_params(fit_obj, newx = X[idx_test[1], ],
-                                        newy = y[idx_test[1]])
+                                        newy = y[idx_test[1]], 
+                                        method = "polyak")
 print(fit_obj2)
 ```
 
